# postgres-agent

./: .gitignore  README.md  SQL_Query_Guide.txt  SQL_Query_Report.txt  main.py  pyproject.toml  report.txt  requirements.txt
postgres_da_ai_agent/: example.py  main.py
postgres_da_ai_agent/modules/: Create a python class PROMPT.txt  db.py  file.py  orchestrator.py
postgres_da_ai_agent/modules/agents/: agents.py
postgres_da_ai_agent/modules/config/: config.py
postgres_da_ai_agent/modules/db/: db.py
postgres_da_ai_agent/modules/file/: file.py
postgres_da_ai_agent/modules/llm/: llm.py
postgres_da_ai_agent/modules/orchestrator/: orchestrator.py
postgres_da_ai_agent/modules/prompts/: prompts.py
postgres_da_ai_agent/modules/utils/: utils.py
